--- a/submitted.html
+++ b/submitted.html
@@ -3,7 +3,8 @@
     <title>Form Test</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -28,5 +29,4 @@
             </ul>
         </footer>
 </body>
-<script src="./dist/style.js"></script>
 </html>
